; ModuleID = '/home/carl/AnghaBench/linux/drivers/w1/slaves/extr_w1_ds2405.c_output_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/w1/slaves/extr_w1_ds2405.c_output_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.w1_slave = type { %struct.w1_master* }
%struct.w1_master = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @output_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @output_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.w1_slave*, align 8
  %9 = alloca %struct.w1_master*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  %12 = load %struct.device*, %struct.device** %5, align 8
  %13 = call %struct.w1_slave* @dev_to_w1_slave(%struct.device* %12)
  store %struct.w1_slave* %13, %struct.w1_slave** %8, align 8
  %14 = load %struct.w1_slave*, %struct.w1_slave** %8, align 8
  %15 = getelementptr inbounds %struct.w1_slave, %struct.w1_slave* %14, i32 0, i32 0
  %16 = load %struct.w1_master*, %struct.w1_master** %15, align 8
  store %struct.w1_master* %16, %struct.w1_master** %9, align 8
  %17 = load %struct.w1_master*, %struct.w1_master** %9, align 8
  %18 = getelementptr inbounds %struct.w1_master, %struct.w1_master* %17, i32 0, i32 0
  %19 = call i32 @mutex_lock_interruptible(i32* %18)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %3
  %23 = load i32, i32* %10, align 4
  store i32 %23, i32* %4, align 4
  br label %45

24:                                               ; preds = %3
  %25 = load %struct.w1_slave*, %struct.w1_slave** %8, align 8
  %26 = call i32 @w1_ds2405_read_pio(%struct.w1_slave* %25)
  store i32 %26, i32* %10, align 4
  %27 = load i32, i32* %10, align 4
  %28 = icmp slt i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %24
  %30 = load i32, i32* %10, align 4
  store i32 %30, i32* %11, align 4
  br label %38

31:                                               ; preds = %24
  %32 = load i32, i32* %10, align 4
  %33 = icmp ne i32 %32, 0
  %34 = zext i1 %33 to i64
  %35 = select i1 %33, i32 49, i32 48
  %36 = trunc i32 %35 to i8
  %37 = load i8*, i8** %7, align 8
  store i8 %36, i8* %37, align 1
  store i32 1, i32* %11, align 4
  br label %38

38:                                               ; preds = %31, %29
  %39 = load %struct.w1_master*, %struct.w1_master** %9, align 8
  %40 = call i32 @w1_reset_bus(%struct.w1_master* %39)
  %41 = load %struct.w1_master*, %struct.w1_master** %9, align 8
  %42 = getelementptr inbounds %struct.w1_master, %struct.w1_master* %41, i32 0, i32 0
  %43 = call i32 @mutex_unlock(i32* %42)
  %44 = load i32, i32* %11, align 4
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %38, %22
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local %struct.w1_slave* @dev_to_w1_slave(%struct.device*) #1

declare dso_local i32 @mutex_lock_interruptible(i32*) #1

declare dso_local i32 @w1_ds2405_read_pio(%struct.w1_slave*) #1

declare dso_local i32 @w1_reset_bus(%struct.w1_master*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
